	- Fixed lpadmin when both -m and -o are used (STR #4578)
	- The web interface always showed support for 2-sided printing
	  (STR #4595)
	- cupsRasterReadHeader did not fully validate the raster header
	  (STR #4596)
	- The rastertopwg filter did not check for truncated input (STR #4597)
	- The cups-lpd mini-daemon did not check for request parameters
	  (STR #4603)
	- Added Russian translation (STR #4577)


CHANGES IN CUPS V2.0.2

	- Security: cupsRasterReadPixels buffer overflow with invalid page
	  header and compressed raster data (STR #4551)
	- Command-line programs were not localized on Mac OS X
	  (<rdar://problem/14546232>)
	- The scheduler incorrectly cleared the MakeModel string in the
	  printers.conf file after a restart (<rdar://problem/16827518>)
	- CUPS did not compile with older versions of GNU TLS (STR #4527)
	- CUPS did not compile without Avahi or mDNSResponder (STR #4523)
	- ippLength() did not return the correct length for IPP_TAG_CONST
	  string values.
	- The scheduler incorrectly aborted jobs after a job was restarted
	  (<rdar://problem/19129387>)
	- The cups-files.conf file contained the old ServerCertificate/Key
	  directives instead of ServerKeychain.
	- Fixed builds when no SSL/TLS library is available, or when explicitly
	  disabled (STR #4531)
	- Fixed an OpenBSD charset transcoding issue.
	- Fixed USB printing on OpenBSD (STR #4525)
	- The --without-xinetd configure option did not work (STR #4542)
	- Backends needing to load OS X kernel extensions did not work
	  (<rdar://problem/19015679>)
	- Mapping of PPD keywords to IPP keywords did not work if the PPD
	  keyword was already an IPP keyword (<rdar://problem/19121005>)
	- cupsGetPPD* sent bad requests (STR #4567)
	- ippserver used the wrong temporary directory on Windows (STR #4547)
	- ippserver did not handle Bonjour registrations properly (STR #4548)
	- The scheduler could crash during shutdown if Avahi was shutdown
	  first (STR #4550)