@@ -17,6 +17,7 @@ CHANGES IN CUPS V2.0.3
 	- The rastertopwg filter did not check for truncated input (STR #4597)
 	- The cups-lpd mini-daemon did not check for request parameters
 	  (STR #4603)
+	- The scheduler could get caught in a busy loop (STR #4605)
 	- Added Russian translation (STR #4577)
 
 
